# customer-support-openenv

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate_env.py
server/: __init__.py  app.py
src/: __init__.py  env.py  tasks.py
